--- a/相关纪要.md
+++ b/相关纪要.md
@@ -1,1 +1,11 @@
-﻿# 相关纪要---* 配置文件> * 使用自带的ConfigParser库> * 文件格式为conf或ini（待定）  
+﻿# 相关纪要
+---
+* 配置文件
+> * 使用自带的ConfigParser库
+> * 文件格式为conf或ini（待定）
+
+
+
+* cache文件夹中所有新建的缓存文件在使用完成后务必主动删除，不可作为需要留存文件的存储文件夹。
+* 每个文件夹代表的包中的方法写在__init__.py文件中，其他文件中的函数不对外开放
+* 
